added jquery mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,40 @@
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<!-- Start of first page -->
+
+<div data-role="page" id="list">
+
+	<div data-role="header">
+		<h1><%= title %></h1>
+	</div><!-- /header -->
+
+	<div data-role="content">	
+		<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="b"> 
+			<li data-role="list-divider">Email Templates</li> 
+			<li><a href="mailto:homein5@onmachine.org?subject=Home%20in%205&amp;body=Lvoe" class="ui-link-inherit">Home in 5</a></li> 
+			<li><a href="mailto:runninglate@onmachine.org?subject=Running%20late&amp;body=Lvoe" class="ui-link-inherit">Running Late</a></li> 
+		</ul>
+		
+		<p>View internal page called <a href="#bar">bar</a></p>	
+	</div><!-- /content -->
+
+	<div data-role="footer">
+		<h4>Worksplayz</h4>
+	</div><!-- /header -->
+</div><!-- /page -->
+
+
+<!-- Start of second page -->
+<div data-role="page" id="bar">
+
+	<div data-role="header">
+		<h1>Bar</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">	
+		<p>I'm first in the source order so I'm shown as the page.</p>		
+		<p><a href="#foo">Back to foo</a></p>	
+	</div><!-- /content -->
+
+	<div data-role="footer">
+		<h4>Page Footer</h4>
+	</div><!-- /header -->
+</div><!-- /page -->
