--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title><%= title %></title>
-		<link rel='stylesheet' href='/public/stylesheets/style.css' />
+		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
+		<script type="text/javascript" src="/javascripts/pre-mobile-script.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
 	</head>
 	<body>
